--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "./dist/felver.min.js",
   "scripts": {
     "dev": "node build/webpack.dev.js",
-    "build": "webpack --progress --hide-modules --config build/webpack.build.min.js && webpack --progress --hide-modules --config  build/webpack.build.js;"
+    "unit": "mocha --compilers js:babel-core/register test/unit/specs/geometry.js ",
+    "build": "webpack --progress --hide-modules --config build/webpack.build.min.js && webpack --progress --hide-modules --config  build/webpack.build.js;",
+    "test:server": "node --max-old-space-size=8096 test/index.js"
   },
   "repository": "https://github.com/royJang/felver.git",
   "author": "royjang <zzl11081@gmai.com>",
   "license": "MIT License",
   "devDependencies": {
+    "axios": "^0.16.2",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -19,6 +22,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.17.1",
+    "chai": "^3.5.0",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
@@ -26,13 +30,34 @@
     "gulp": "^3.9.1",
     "gulp-gh-pages": "^0.5.4",
     "html-webpack-plugin": "^2.28.0",
+    "jasmine": "^2.6.0",
+    "jasmine-core": "^2.6.2",
+    "karma": "^1.7.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.1.1",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-phantomjs-shim": "^1.4.0",
+    "karma-requirejs": "^1.1.0",
+    "karma-sinon-chai": "^1.3.1",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.30",
+    "karma-webpack": "^2.0.2",
+    "mocha": "^3.2.0",
+    "nightwatch": "^0.9.12",
+    "requirejs": "^2.3.3",
+    "selenium-server": "^3.0.1",
+    "semver": "^5.3.0",
+    "sinon": "^2.1.0",
+    "sinon-chai": "^2.8.0",
     "webpack": "^2.5.1",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-dev-server": "^2.4.5",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0"
   },
-  "dependencies": {},
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   }
